syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.baichen.jraft.transport.grpc";
option java_outer_classname = "AppendRequestProto";
option objc_class_prefix = "JRAFT";

package com.baichen.jraft.transport.grpc;

service GrpcTransportService {

  rpc sendAppend (stream AppendRequest) returns (stream RpcResult) {}

  rpc sendVote (stream VoteRequest) returns (stream RpcResult) {}
}

message AppendRequest {
  int32 requestId = 1;
  int32 term = 2;
  int32 prevLogIndex = 3;
  int32 prevLogTerm = 4;
  int32 leaderCommit = 5;
  string leaderId = 6;
  repeated Log logs = 7;
}

message Log {
  int32 index = 1;
  int32 term = 2;
  bytes command = 3;
}

message RpcResult {
  int32 code = 1;
  int32 term = 2 ;
  int32 requestId = 3;
  int32 commitIndex = 4;
  string msg = 5;
  string nodeId = 6;
}

message VoteRequest {
  int32 requestId = 1;
  int32 term = 2;
  int32 lastLogIndex = 3;
  int32 lastLogTerm = 4;
  string candidateId = 5;
}

